# foo.bar-test-assignment

./: .envexample  README.md  babel.cfg  pyproject.toml  run.py
src/: __init__.py  main.py
src/app/: __init__.py  babel.py  database.py  login.py
src/app/routers/: auth.py  errors.py  feedback.py  users.py
src/app/services/feedback/: forms.py  models.py  service.py
src/app/services/user/: forms.py  logic.py  models.py  service.py
src/app/templates/: feedback.html  users.html
src/core/: config.py  database.py  login.py
src/core/feedback/: forms.py  models.py  service.py
src/core/user/: forms.py  models.py  service.py
src/templates/: denied.html  feedback.html  login.html  notfound.html  users.html
src/translations/nl/LC_MESSAGES/: messages.po
src/translations/ru/LC_MESSAGES/: messages.po
